Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters. Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters. Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters. Allegro Junior Software Engineer | SmartRecruiters. Guardant Health Senior Software Engineer, Integrations - Seattle, WA | SmartRecruiters. Guardant Health Staff Software Engineer / Developer, Redwood City, CA | SmartRecruiters. Backend Software Engineer - The Machine Learning Conference. Sr. Software Engineer (SFDC)-San Jose,CA - ActiveSoft, Inc - Career Page. Senior Software Engineer - Higher Logic | Women Who Code. Senior Software Developer - Konrad Group - Career Page. Guardant Health Senior Software Engineer, Redwood City, CA | SmartRecruiters. Guardant Health Senior Software Engineer, Integrations - Redwood City, CA | SmartRecruiters. Opendoor - Home Intelligence Software Engineer. Front - Software Engineering Intern (Summer 2020). Schneider Electric NAM Careers - Software Developer, Software Innovation Center. Palo Alto Networks Careers - Software Engineer (Network Forwarding). ServiceNow Careers - Staff Software Engineer. Job Application for Senior Software Engineer, Cloud (Developer Experience) at Granular. Job Application for Senior Software Engineer, Cloud - Infrastructure at Granular. Software Developer - Cantium Business Solutions - Kent County Council Careers. Palo Alto Networks Careers - Intern - Prisma Access Software Engineer. Job Application for Senior Software Engineer at Credible. Job Application for Senior Software Engineer at Credible. Job Application for Senior Front End Software Engineer at Domino Data Lab.  Silicon Labs Careers - Embedded Software Engineer. Imperva Careers - Senior Software Engineer, Full Stack. Software Engineer (Fraud Prevention Section) : ESD - Rakuten Careers. Software Engineer - Test Automation (Messaging Group) : DSAID - Rakuten Ca

--- a/software.html
+++ b/software.html
@@ -39,8 +39,32 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://mlconf.com/job/compology-san-francisco-6-backend-software-engineer/'>Backend Software Engineer - The Machine Learning Conference</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698693011-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692883-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692852-lead-full-stack-cloud-software-engineer-for-global-sportswear-brand'>Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697953180-junior-software-engineer'>Allegro Junior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692085-senior-software-engineer-integrations-seattle-wa'>Guardant Health Senior Software Engineer, Integrations - Seattle, WA | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Seattle, WA Seattle, WA  Seattle, WA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/GuardantHealth/743999698692211-staff-software-engineer-developer-redwood-city-ca'>Guardant Health Staff Software Engineer / Developer, Redwood City, CA | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Redwood City, CA Redwood City, CA  Redwood City, CA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://mlconf.com/job/compology-san-francisco-6-backend-software-engineer/'>Backend Software Engineer - The Machine Learning Conference</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='http://activesoft.applytojob.com/apply/XZQv4q60HA/Sr-Software-Engineer-SFDCSan-JoseCA'>Sr. Software Engineer (SFDC)-San Jose,CA - ActiveSoft, Inc - Career Page</a></h5> 
@@ -63,7 +87,7 @@
 <p><span class="badge badge-light">Redwood City, CA Redwood City, CA  Redwood City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/opendoor/d6b45059-c78b-4785-90bc-83610de45b76'>Opendoor - Home Intelligence Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/opendoor/d6b45059-c78b-4785-90bc-83610de45b76'>Opendoor - Home Intelligence Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -71,7 +95,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oCZT9fwn&__jvst=Employee&__jvsd=sEb77gwO&__jvsc=Twitter&bid=nND3qMwa'>Schneider Electric NAM Careers - Software Developer, Software Innovation Center</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oCZT9fwn&__jvst=Employee&__jvsd=sEb77gwO&__jvsc=Twitter&bid=nND3qMwa'>Schneider Electric NAM Careers - Software Developer, Software Innovation Center</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -103,7 +127,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/credible/jobs/1942074'>Job Application for Senior Software Engineer at Credible</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/credible/jobs/1942074'>Job Application for Senior Software Engineer at Credible</a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -167,7 +191,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ozNUafwa&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nLLVqMw8'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -235,7 +259,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/impinj/job/ol0nbfwD?utm_source=bambu&utm_medium=social&utm_campaign=advocacy&blaid=265656'>Impinj Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -255,7 +279,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxFwi7mc.M30CyFIQZW6iep8-&embedsource=CareerSite'>Lead Application Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxFwi7mc.M30CyFIQZW6iep8-&embedsource=CareerSite'>Lead Application Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -271,7 +295,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/d52bdff6-b6d6-4891-8303-a4ef88dae666'>Couchbase - Principal Software Engineer - Query Optimizer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -283,7 +307,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.zupajobs.co.uk/job/senior-software-developers-c-50k-60k-eastleigh-hampshire/'>Senior Software Developers C# ?50K - ?60K - Eastleigh, Hampshire - zupaJobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -373,7 +397,7 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500544002'>Job Application for Staff Software Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500544002'>Job Application for Staff Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -381,7 +405,7 @@
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -416,30 +440,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oFegbfw4&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nkDqqMw4'>Cirrus Logic Careers - Software Developer (Java, C#, C++)</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/67957fbc-db1a-40ca-ba57-74277bd191cf'>Recurly - Software Engineer, Growth</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/78b93aa9-bdb2-4f68-ac68-b4925b20d78d'>Recurly - Software Engineer, Growth</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/88f2731a-570b-4831-9653-8bd6ece6cf9b'>Recurly - Senior Software Engineer, Subscriptions</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/9a44757a-ad0d-44ec-8679-2a3d4319a694'>Recurly - Senior Software Engineer, Growth</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/a343d553-785a-4a35-be97-b4ee20a532c0'>Recurly - Senior Software Engineer, Growth</a></h5> 
-<p><span class="badge badge-light">Boulder</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/recurly/b83cd6df-1219-4bab-b0df-b9837918497f'>Recurly - Senior Software Engineer, Growth</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-11-01</p>
 <hr/>
 
 
