--- a/project-manager.html
+++ b/project-manager.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/returnly/0b779427-7507-4920-836d-0cc0bba8d148'>Returnly - Engineering Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Madrid  San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://spnsolutions.recruiterbox.com/jobs/fk03one/'>
@@ -51,10 +51,10 @@
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1941281'>Job Application for Technical Program Manager at Pivotal Software</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ox9jbfwU&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=neF5qMwF'>NICE inContact Careers - Associate Project Manager II</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ox9jbfwU&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=neF5qMwF'>NICE inContact Careers - Associate Project Manager II</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio  Columbus, OH</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -166,7 +166,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o1ncbfwv&__jvst=Employee&__jvsd=sdL0qgw9&__jvsc=Twitter&bid=nCyRqMwI'>Forescout Technologies Inc. Careers - Professional Services Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o1ncbfwv&__jvst=Employee&__jvsd=sdL0qgw9&__jvsc=Twitter&bid=nCyRqMwI'>Forescout Technologies Inc. Careers - Professional Services Project Manager</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -236,7 +236,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -336,7 +336,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698629025-project-manager-commercial-'>Turner & Townsend Project Manager (Commercial) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698629025-project-manager-commercial-'>Turner & Townsend Project Manager (Commercial) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -348,7 +348,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -422,7 +422,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aptiv-mobility/f1b0036b-11b6-468b-a2db-e17cc8530ec6'>Aptiv-Mobility - Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/f1b0036b-11b6-468b-a2db-e17cc8530ec6'>Aptiv-Mobility - Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
