--- a/product-manager.html
+++ b/product-manager.html
@@ -40,14 +40,44 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1896165'>Job Application for Traveling Senior Product Designer- Munich/ Ingolstadt at Pivotal Software</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692819-product-owner-for-global-sportswear-brand'>Aroghia Group Product Owner for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692691-technical-product-manager-for-global-sportswear-brand'>Aroghia Group Technical Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/veeva/ea2911a3-e593-4db6-a729-fbbccf42677d'>Veeva Systems - Product Manager - Andi</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697890847-product-manager-performance-marketing-team'>Allegro Product Manager - Performance Marketing Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://sharpist.join.com/jobs/475712-product-owner-m-f-d'>Job @ Sharpist (Berlin): Product Owner (m/f/d) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585385'>Stellenangebot: Digital Product Designer f?r Produktentwicklung (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=twitter'>
+      UI + Product Designer at Output - Los Angeles CA - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light">Los Angeles</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1896165'>Job Application for Traveling Senior Product Designer- Munich/ Ingolstadt at Pivotal Software</a></h5> 
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=feed'>
       UI + Product Designer at Output - Los Angeles CA - Dribbble Design Jobs
   </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://anthem.referrals.selectminds.com/jobs/product-manager-ps29484-44940'>Product Manager PS29484 - Anthem, Inc. Careers</a></h5> 
@@ -58,7 +88,7 @@
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/artsy/jobs/1944747'>Job Application for Senior Product Manager at Artsy</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artsy/jobs/1944747'>Job Application for Senior Product Manager at Artsy</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -78,7 +108,7 @@
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
       Contract Senior Product Manager - Elsewhen
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
@@ -106,7 +136,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -204,7 +234,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nwea/job/ojVrbfwA'>NWEA Careers - Senior Product Manager, Early Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nwea/job/ojVrbfwA'>NWEA Careers - Senior Product Manager, Early Learning</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -264,7 +294,7 @@
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -280,11 +310,11 @@
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -354,7 +384,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -366,7 +396,7 @@
 <p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://leasequery.applytojob.com/apply/WWno0NJnPI/Product-Owner'>Product Owner - LeaseQuery - Career Page</a></h5> 
+<h5><a href='http://leasequery.applytojob.com/apply/WWno0NJnPI/Product-Owner'>Product Owner - LeaseQuery - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -424,40 +454,12 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/americaatwork/f8c2ae3a-693a-4fd1-a0b6-b4c141e3f408'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
-<p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/xkxzQYHiBd/Product-Manager-Mobile-Seattle-WA'>Product Manager - Mobile (Seattle, WA) - MedBridge - Career Page</a></h5> 
-<p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
-<p><span class="badge badge-light">Toronto</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/payu/jobs/4478625002'>Job Application for product manager at PayU</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/upgrade/0ab79d4c-5943-4181-a929-d15bf578bb45'>Upgrade - Product Manager</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o9Tsbfwp&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nFFXpMwX'>Tenable Careers - Senior Product Manager</a></h5> 
-<p><span class="badge badge-light">Columbia, Maryland</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
-<p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
