--- a/ui.html
+++ b/ui.html
@@ -40,10 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=twitter'>
+      UI + Product Designer at Output - Los Angeles CA - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light">Los Angeles</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=feed'>
       UI + Product Designer at Output - Los Angeles CA - Dribbble Design Jobs
   </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='http://konradgroup.applytojob.com/apply/gCrfy9BLg9/Senior-UIUX-Designer'>Senior UI/UX Designer - Konrad Group - Career Page</a></h5> 
@@ -114,7 +120,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/uxui-designer-intern-mf-realxdata-gmbh-berlin'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rheingaufoundersportfolio.recruitee.com/o/uxui-designer-intern-mf-realxdata-gmbh-berlin'>
       UX/UI DESIGNER INTERN (m/f) @realxdata GmbH - Rheingau Founders Portfolio
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -142,7 +148,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698648048-equipiers-a-temps-plein-nuit-st-nicolas-'>McDonald's Restaurants ?quipiers ? temps plein (NUIT/St-Nicolas) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698648048-equipiers-a-temps-plein-nuit-st-nicolas-'>McDonald's Restaurants ?quipiers ? temps plein (NUIT/St-Nicolas) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -296,7 +302,7 @@
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://calendars.illinois.edu/detail/2909?eventId=33358935'>Career Development Center Events ? University of Illinois Springfield ? UIS</a></h5> 
+<h5><a href='https://calendars.illinois.edu/detail/2909?eventId=33358935'>Career Development Center Events ? University of Illinois Springfield ? UIS</a></h5> 
 <p><span class="badge badge-light">Springfield Springfield  Springfield</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -392,7 +398,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
+<h5><a href='https://houzy.join.com/jobs/471475-ui-designer-80-100'>Job @ Houzy (Z?rich): UI Designer 80-100% | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -416,7 +422,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
+<h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
       Senior UX/UI Designer (f/m/div) for a new finleap venture - FinLeap GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin</span></p>
@@ -457,10 +463,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
-<p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
