Technical Project Manager | Arlington, VA | AbleVets
. ServiceNow Careers - Senior Program Manager. Returnly - Engineering Project Manager. 
    Project Manager at SPN Solutions
. Job Application for Technical Program Manager at Pivotal Software. NICE inContact Careers - Associate Project Manager II. Project Manager Airbus (m/w/d) in Finkenwerder - Orizon GmbH. 
    Project Manager at Borda Technology
. McFadyen Digital Technical Project Manager | SmartRecruiters. McFadyen Digital Technical Project Manager | SmartRecruiters. Senior Project Manager - San Carlos, . Nortek Air Solutions Careers - Project Manager III. Nortek Air Solutions Careers - Senior Project Manager. Assistant Program Manager, Compliance - Careers at Nintendo of America. Senior Construction Project Manager - El Segundo, . Xyant Technology, Inc. Project Coordinator / Jr Project Manager | SmartRecruiters. Lee Enterprises Careers - Project Manager. Job Application for Cyber Security Technical Project Manager  at Objectstream. Foster Farms Project Manager R&D | SmartRecruiters. CavalierIt Inc Change Mgmt Project Manager | SmartRecruiters. Synergy Global Systems Construction Project Manager | SmartRecruiters. Premier Research Careers - Sr. Project Manager, Neurology. Construction Materials Project Manager | Lincoln, NE | Terracon. Program and Project Managers. IT Project Manager - The Federal Reserve System Careers. Senior IT Project Manager - The Federal Reserve System Careers. Redox - Security Technical Project Manager. Vacature Marketing Project Manager in Maldegem | Jobat.be. Job Application for Senior Program Manager, GLAM and Culture at Wikimedia Foundation. Sr. Project Manager - Cantor Fitzgerald / BGC Partners / GFI / Newmark Knight Frank Careers. Project Manager. 
    Product and Project Manager  at OYO
. Forescout Technologies Inc. Careers - Professional Services Project Manager. 
U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from NeedLS, by Lori Steiner
. Nexidia Care

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.themuse.com/jobs/ablevets/technical-project-manager-1199b9?utm_source=twitter&utm_medium=social&utm_campaign=twjobs_ablevets_1630_november2019'>
+
+Technical Project Manager | Arlington, VA | AbleVets
+
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oAZ7afwA&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nfT7qMwW'>ServiceNow Careers - Senior Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/returnly/0b779427-7507-4920-836d-0cc0bba8d148'>Returnly - Engineering Project Manager</a></h5> 
 <p><span class="badge badge-light">Madrid  San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -216,7 +228,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://onnigroup.applytojob.com/apply/diKePQyV4I/Assistant-Project-Manager'>Assistant Project Manager - Onni Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onnigroup.applytojob.com/apply/diKePQyV4I/Assistant-Project-Manager'>Assistant Project Manager - Onni Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -228,7 +240,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Scottsdale, Arizona United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.toronto.ca/job/Toronto-SENIOR-PROJECT-MANAGER-ECS-ON-M5V-3C6/537154117/?utm_campaign=889'>SENIOR PROJECT MANAGER ECS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.toronto.ca/job/Toronto-SENIOR-PROJECT-MANAGER-ECS-ON-M5V-3C6/537154117/?utm_campaign=889'>SENIOR PROJECT MANAGER ECS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -260,7 +272,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dailypayinc/jobs/4503592002'>Job Application for Project Manager at DailyPay Inc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dailypayinc/jobs/4503592002'>Job Application for Project Manager at DailyPay Inc</a></h5> 
 <p><span class="badge badge-light">New York, New York  New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -284,7 +296,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -336,7 +348,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698629025-project-manager-commercial-'>Turner & Townsend Project Manager (Commercial) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698629025-project-manager-commercial-'>Turner & Townsend Project Manager (Commercial) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -422,11 +434,11 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/f1b0036b-11b6-468b-a2db-e17cc8530ec6'>Aptiv-Mobility - Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/f1b0036b-11b6-468b-a2db-e17cc8530ec6'>Aptiv-Mobility - Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -443,14 +455,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MX/743999698620631-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Lehi, UT</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
