Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters.     Data Scientist - Fraud at Simpl . Loadsmart - Senior Data Science Engineer. Knock, Inc - Data Scientist. WW International (formerly Weight Watchers) Careers - Senior Data Scientist. Job @ Integr8 media (Berlin): Data Scientist (m/w/d) | JOIN. Farfetch Careers - Data Scientist - Recommendations. Wish - Lead Data Scientist. Data Scientist - Asurion Careers. Assistant Professor - Data Science Ethics (JPF02271) - UC San Diego AP On-Line Recruit. Associate or Full Professor - Data Science Ethics (JPF02273) - UC San Diego AP On-Line Recruit. Align Technology Careers - Senior Data Scientist. Job Application for Senior Data Scientist at Wrike. Gameloft Scientifique des données - Data Scientist | SmartRecruiters. Biogen Co-op: Human Performance/EHS Data Scientist | SmartRecruiters. Founders Factory  - Data Scientist (BeRightBack). GRAIL - Clinical Data Scientist. Department for International Trade  - Digital, Data and Technology Careers - Data Scientist / Senior Data Scientist. Job Application for Data Science Team Lead at THE ICONIC. Job @ talpasolutions (Essen): Data Scientist | JOIN. Job @ talpasolutions (Essen): Senior Data Scientist | JOIN. Business Engineer/IT Requirements Engineer (m/w) | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Freedom Financial Network Careers - Senior Data Scientist. Junior Data Scientist (Working Student m/f/d). (Senior) Data Scientist -  The Adecco Group Careers. Farfetch Careers - Principal Data Scientist. Data Science Lead. Senior JAVA Fullstack Developer | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Data Scientist - SparkCognition - Career Page. Data Scientist - Oil & Gas Industry - SparkCognition - Career Page. Analytics & Data Science Consultants - All Levels - GHD Careers. Learning Data Science Outside of the Classroom - Punchh. Job Application for Data Scientist

--- a/data-science.html
+++ b/data-science.html
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698651456-co-op-human-performance-ehs-data-scientist'>Biogen Co-op: Human Performance/EHS Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698651456-co-op-human-performance-ehs-data-scientist'>Biogen Co-op: Human Performance/EHS Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/463825-senior-data-scientist'>Job @ talpasolutions (Essen): Senior Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/463825-senior-data-scientist'>Job @ talpasolutions (Essen): Senior Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -197,7 +197,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
+<h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -205,7 +205,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/f2ac31ef-e2a6-44fa-b683-4d850a7d8ebb'>Gojek - Sr. Data Scientist - GoFood</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/f2ac31ef-e2a6-44fa-b683-4d850a7d8ebb'>Gojek - Sr. Data Scientist - GoFood</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -247,11 +247,11 @@
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/450246-data-scientist-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Data Scientist In... | JOIN</a></h5> 
+<h5><a href='https://verticalscale.join.com/jobs/450246-data-scientist-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Data Scientist In... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://verticalscale.join.com/jobs/457606-data-scientist-as-cto-co-founder-partner-f-m-d'>Job @ Vertical  Scale  (Berlin): Data Scientist as... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/457606-data-scientist-as-cto-co-founder-partner-f-m-d'>Job @ Vertical  Scale  (Berlin): Data Scientist as... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -321,7 +321,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-data-scientist-12371'>Senior Data Scientist - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-data-scientist-12371'>Senior Data Scientist - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -371,7 +371,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
 <p><span class="badge badge-light">Bangkok Bangkok Bangkok</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -420,7 +420,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -444,7 +444,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Warszawa, Polska</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
+<h5><a href='https://careers.ba.com/job/heathrow/internship-data-science/22348/13431643'>Internship - Data Science at British Airways</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
